# cybersecurity-job-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  analyze_jobs.py  config.py  cybersecurity_scraper.py  demo.py  pyproject.toml  qualification_extractor.py  requirements.txt  scheduled_scraper.py  usajobs_client.py
.github/: instructions.md
.github/workflows/: daily-scrape.yml
data/latest/: ai_jobs.csv  cyber_jobs.csv  cyber_jobs.json  new_ai_jobs.json  new_cyber_jobs.json
data/state/: discord_posted.json  known_ai_ids.json  known_cyber_ids.json
docs/: ai.html  cyber.html  index.html  notifications.md  styles.css
docs/assets/: app.js  styles.css
docs/data/: ai_jobs.json  cyber_jobs.json
scripts/: get_discussion_categories.py
src/ai_cyberjobs/: __init__.py  cli.py  config.py  models.py  queries.py
src/ai_cyberjobs/client/: base.py  usajobs.py
src/ai_cyberjobs/notify/: discord.py  discord_bot.py  discord_detailed.py  discussions.py  format.py  notify.py
src/ai_cyberjobs/pipeline/: dedupe.py  fetch.py  normalize.py  store.py
tests/: test_client_usajobs.py  test_notify_format.py  test_pipeline_dedupe.py  test_store_io.py
