[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cyberjobs"
version = "0.1.0"
description = "Daily USAJOBS scraper for AI and Cybersecurity jobs with site + email notifications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EWU CS", email = "jdoner@ewu.edu" }]
keywords = ["USAJOBS", "jobs", "AI", "Cybersecurity", "scraper"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "typer>=0.12.3",
  "python-dotenv>=1.0.1",
  "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.7",
  "black>=24.4.2",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "types-requests>=2.32.0.20240622",
  "pre-commit>=3.7.1",
]

[project.scripts]
ai-cyberjobs = "ai_cyberjobs.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "T20", "Q", "PTH", "PL"]
ignore = ["E203", "E266", "E501", "B008", "PLR2004", "UP038"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
plugins = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=ai_cyberjobs --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/ai_cyberjobs"]
